publish: link fixed
generated from commit 4271442a0e64e8400d5c1dee66f32510c94b781b

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div id="toc">
       </div>
         <ul class="toc-footer">
-            <li><a href='http://api.resourcewatch.org:82'>Sign Up for a Developer Key</a></li>
+            <li><a href='https://ui.resourcewatch.org'>Sign Up for a Developer Key</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
@@ -130,7 +130,7 @@
 <p>To generate your own token, follow the next steps:</p>
 
 <ol>
-<li>Navigate to <a href="http://api.resourcewatch.org:82">http://api.resourcewatch.org:82</a>
+<li>Navigate to <a href="https://ui.resourcewatch.org">https://ui.resourcewatch.org</a>
 If you aren&rsquo;t logged in yet, the application will redirect you to the login page.
 You will see:
 <img src="images/authentication/login.png" alt="Control Tower login page" /></li>
