--- a/index.html
+++ b/index.html
@@ -2960,42 +2960,41 @@ Remember — the response is jsonapi format
 }
 '</span>
 </code></pre><pre class="highlight shell"><code>curl -i -XGET http<span class="se">\:</span>//api.resourcewatch.org/v1/query<span class="se">\?</span>sql<span class="se">\=</span><span class="k">select</span><span class="se">\ \*\ </span>from<span class="se">\ </span>&lt;dataset.slug&gt;
-</code></pre>
-<h2 id="query-examples">Query examples</h2>
+</code></pre><pre class="highlight plaintext"><code>## Some query examples
 
-<h3 id="select-and-aggregations">Select and aggregations</h3>
+### Select and aggregations
 
-<p>select * from table
-select count(<em>) from table
+select * from table
+select count(*) from table
 select a, b from table
-select a, count(</em>) from table</p>
+select a, count(*) from table
 
-<h3 id="functions-and-alias">Functions and alias</h3>
+### Functions and alias
 
-<p>select sum(int) from table
+select sum(int) from table
 select avg(int) from table
 select max(int) from table
 select min(int) from table
-select min(int) as minimun from table</p>
+select min(int) as minimun from table
 
-<p>select * from table limit=20
-select a as b from table limit=20</p>
+select * from table limit=20
+select a as b from table limit=20
 
-<h3 id="where-conditionals">Where conditionals</h3>
+### Where conditionals
 
-<p>select * from table where a &gt; 2
+select * from table where a &gt; 2
 select * from table where a = 2
 select * from table where a &lt; 2
 select * from table where a &gt;= 2
 select * from table where a = 2 and b &lt; 2
 select * from table where text like ‘a%’
-Select * from table where st_intersects(st_setsrid(st_geomfromgeojson(‘{}’), 4326), the_geom)</p>
+Select * from table where st_intersects(st_setsrid(st_geomfromgeojson(‘{}’), 4326), the_geom)
 
-<h3 id="group-by">Group by</h3>
+### Group by
 
-<p>select a, count(int) from table group by a
-select count(*) FROM tablename group by ST_GeoHash(the_geom, 8)</p>
-
+select a, count(int) from table group by a
+select count(*) FROM tablename group by ST_GeoHash(the_geom, 8)
+</code></pre>
 <h2 id="rasdaman-queries">Rasdaman queries</h2>
 
 <p>Rasdaman datasets do not expose a SQL interface from where to query the data – instead it offers interfaces to WCPS (the OGC Web Coverage Processing Service) and RasQL (a superset of SQL dealing with coverages). So far only WCPS is supported in the RW API. Two different endpoints are offered: one to directly run WCPS queries against the database, and one that abstracts the calculation of (2D) zonal statistics on rasdaman coverages with vector masks. For more information on the WCPS standard, consult the <a href="http://www.opengeospatial.org/standards/wcp">OGC page</a> about it</p>
