--- a/index.html
+++ b/index.html
@@ -123,37 +123,32 @@
 
           <h1 id="authentication">Authentication</h1>
 
-<p>The RW API uses JWT Tokens to identify and authenticate users.</p>
+<p>The RW API uses JWT <a href="https://tools.ietf.org/html/rfc7519">(JSON Web Tokens)</a> to identify and authenticate its users.</p>
 
-<h2 id="how-to-generate-your-own-oauth-token">How to generate your own Oauth Token</h2>
+<h2 id="how-to-generate-your-own-token">How to generate your own token</h2>
 
 <p>To generate your own token, follow the next steps:</p>
 
 <ol>
-<li>Navigate to <a href="https://ui.resourcewatch.org">https://ui.resourcewatch.org</a>
+<li>Navigate to <a href="http://ui.resourcewatch.org/">http://ui.resourcewatch.org/</a>
 If you aren&rsquo;t logged in yet, the application will redirect you to the login page.
 You will see:
 <img src="images/authentication/login.png" alt="Control Tower login page" /></li>
 </ol>
 
-<p>You can login with your WRI credentials (email and password), or with your Google, Facebook, or Twitter account. If you don&rsquo;t remember your password (don&rsquo;t worry! it happens to everyone!), you can reset your password clicking on &lsquo;Recover password&rsquo;.</p>
+<p>You can login with your WRI credentials (email and password) or with other auth providers (a Google, Facebook, or Twitter account). If you don&rsquo;t remember your password (don&rsquo;t worry! it happens to everyone!) you can reset your password clicking on &lsquo;Recover password&rsquo;.</p>
 
 <ol>
 <li><p>After logging in you will be redirected to the Control Tower application and you will see:
 <img src="images/authentication/control-tower.png" alt="Control Tower Dashboard" /></p></li>
 <li><p>To obtain your token, click in the Profile menu item and you will see:
 <img src="images/authentication/profile.png" alt="Control Tower Profile" /></p></li>
-<li><p>Copy your token clicking the Copy button. Remember to add the header <code class="prettyprint">Authorization: Bearer: &lt;yourToken&gt;</code> in order to use it.</p></li>
+<li><p>Copy your token clicking the Copy button. Remember to add the header <code class="prettyprint">Authorization: Bearer: &lt;yourToken&gt;</code> to any API call to authenticate yourself.</p></li>
 </ol>
 
-<h2 id="create-a-new-user">Create a new user</h2>
+<h2 id="how-to-create-a-new-user">How to create a new user</h2>
 
-<p>To create a new user do the following:</p>
-
-<ul>
-<li>Allowed role values: USER, MANAGER, ADMIN</li>
-<li>Apps: rw, gfw, prep, etc&hellip;</li>
-</ul>
+<p>To create a new user make the request on the right:</p>
 <pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/auth/user <span class="se">\</span>
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
 -H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
@@ -167,6 +162,8 @@ You will see:
     }
 }'</span>
 </code></pre>
+<p>There are three allowed roles: USER, MANAGER and ADMIN. The &#39;apps&rsquo; field only permits applications that are powered by the API: &#39;rw&rsquo;, &#39;gfw&rsquo;, &#39;prep&rsquo;, etc.</p>
+
           <h1 id="dataset">Dataset</h1>
 
 <h2 id="what-is-a-dataset">What is a Dataset?</h2>
