publish: Solved display mismatch
generated from commit e6b8b0619304e8e4425307e784b8fe748ec32d28

--- a/index.html
+++ b/index.html
@@ -4447,11 +4447,9 @@ curl -X GET https://api.resourcewatch.org/v1/geostore/admin/ESP
 
 <h3 id="country-list">Country list</h3>
 
-<p>A list of countries can be obtained from this endpoint.
-<code class="prettyprint">shell
-curl -X GET https://api.resourcewatch.org/v1/geostore/admin/list
-</code></p>
-
+<p>A list of countries can be obtained from this endpoint.</p>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/geostore/admin/list
+</code></pre>
 <h3 id="from-country-and-region">From country and region</h3>
 
 <p>If you need obtain the geostore of a region in a country, you can obtain it with the ISO3 and region code:</p>
