--- a/index.html
+++ b/index.html
@@ -991,6 +991,8 @@ curl -X GET https://api.resourcewatch.org/v1/dataset?sort<span class="o">=</span
 </aside>
 
 <h2 id="deleting-a-dataset">Deleting a Dataset</h2>
+
+<p><strong>When a dataset is deleted the user&rsquo;s applications that were present on the dataset will be removed from it. If this results in a dataset without applications, the dataset itself will be then deleted.</strong></p>
 <pre class="highlight shell"><code>curl -X DELETE https://api.resourcewatch.org/v1/dataset/&lt;dataset-id&gt; <span class="se">\</span>
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span>
 -H <span class="s2">"Content-Type: application/json"</span>
@@ -2257,6 +2259,11 @@ Remember — the response is jsonapi format
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
+<h3 id="modify-the-query-url-of-a-widget">Modify the Query Url of a widget</h3>
+
+<p>The <code class="prettyprint">queryUrl</code> query parameter can be set if the user needs to modify the final url that will be requested. All parameters indicated in the queryUrl, will be pass to the microservice.</p>
+<pre class="highlight shell"><code>curl -X GET https://api.resourcewatch.org/v1/widget/049f074a-3528-427d-922b-3c2320e9caf6?queryUrl<span class="o">=</span>/v1/query?sql<span class="o">=</span>Select%20<span class="k">*</span>%20from%20data&amp;geostore<span class="o">=</span>ungeostore
+</code></pre>
 <h2 id="create-a-widget">Create a Widget</h2>
 
 <p>To create a widget, you need to define all of the required fields in the request body. The fields that compose a widget are:</p>
