--- a/index-rw.html
+++ b/index-rw.html
@@ -276,7 +276,19 @@ Arbitrary <a href="https://www.w3.org/TR/2006/REC-xml11-20060816/">XML</a> data 
             </span><span class="p">}</span><span class="w">
         </span><span class="p">},</span><span class="w">
     </span><span class="err">...</span><span class="w">
-    </span><span class="p">]</span><span class="w">
+  </span><span class="p">],</span><span class="w">
+  </span><span class="nt">"links"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+    </span><span class="nt">"self"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://api.resourcewatch.org/v1/dataset?page[number]=1&amp;page[size]=10"</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"first"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://api.resourcewatch.org/v1/dataset?page[number]=1&amp;page[size]=10"</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"last"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://api.resourcewatch.org/v1/dataset?page[number]=99&amp;page[size]=10"</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"prev"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://api.resourcewatch.org/v1/dataset?page[number]=1&amp;page[size]=10"</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"next"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://api.resourcewatch.org/v1/dataset?page[number]=2&amp;page[size]=10"</span><span class="w">
+  </span><span class="p">},</span><span class="w">
+  </span><span class="nt">"meta"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+    </span><span class="nt">"total-pages"</span><span class="p">:</span><span class="w"> </span><span class="mi">99</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"total-items"</span><span class="p">:</span><span class="w"> </span><span class="mi">990</span><span class="p">,</span><span class="w">
+    </span><span class="nt">"size"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
+  </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <h3 id="slug-amp-dataset-id">Slug &amp; dataset-id</h3>
@@ -1287,6 +1299,11 @@ Remember — the response is jsonapi format
       </span><span class="nt">"next"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/widget?page%5Bnumber%5D=2&amp;page%5Bsize%5D=10"</span><span class="p">,</span><span class="w">
       </span><span class="nt">"last"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/widget?page%5Bnumber%5D=64&amp;page%5Bsize%5D=10"</span><span class="p">,</span><span class="w">
       </span><span class="nt">"self"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/widget?page%5Bnumber%5D=1&amp;page%5Bsize%5D=10"</span><span class="w">
+   </span><span class="p">},</span><span class="w">
+   </span><span class="nt">"meta"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+      </span><span class="nt">"total-pages"</span><span class="p">:</span><span class="w"> </span><span class="mi">38</span><span class="p">,</span><span class="w">
+      </span><span class="nt">"total-items"</span><span class="p">:</span><span class="w"> </span><span class="mi">372</span><span class="p">,</span><span class="w">
+      </span><span class="nt">"size"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
    </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
@@ -2702,6 +2719,11 @@ Remember — the response is jsonapi format
       </span><span class="nt">"next"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/layer?page%5Bnumber%5D=2&amp;page%5Bsize%5D=10"</span><span class="p">,</span><span class="w">
       </span><span class="nt">"last"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/layer?page%5Bnumber%5D=64&amp;page%5Bsize%5D=10"</span><span class="p">,</span><span class="w">
       </span><span class="nt">"self"</span><span class="p">:</span><span class="s2">"https://api.resourcewatch.org/v1/layer?page%5Bnumber%5D=1&amp;page%5Bsize%5D=10"</span><span class="w">
+   </span><span class="p">},</span><span class="w">
+   </span><span class="nt">"meta"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+      </span><span class="nt">"total-pages"</span><span class="p">:</span><span class="w"> </span><span class="mi">63</span><span class="p">,</span><span class="w">
+      </span><span class="nt">"total-items"</span><span class="p">:</span><span class="w"> </span><span class="mi">628</span><span class="p">,</span><span class="w">
+      </span><span class="nt">"size"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="w">
    </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
