publish: add protected doc
generated from commit 9a2df94987039aed101b7f4e0b1d4b61b7978f90

--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -602,6 +602,13 @@ curl -X GET https://api.resourcewatch.org/v1/dataset?sort<span class="o">=</span
 <td style="text-align: right">No</td>
 </tr>
 <tr>
+<td>protected</td>
+<td style="text-align: center">If it&rsquo;s a protected layer (not is possible to delete if it&rsquo;s true)</td>
+<td style="text-align: right">Boolean</td>
+<td style="text-align: right">true/false</td>
+<td style="text-align: right">No</td>
+</tr>
+<tr>
 <td>verified</td>
 <td style="text-align: center">To generate a verified blockchain of the dataset</td>
 <td style="text-align: right">Boolean</td>
@@ -2366,6 +2373,13 @@ Remember — the response is jsonapi format
 <td style="text-align: right">No</td>
 </tr>
 <tr>
+<td>protected</td>
+<td style="text-align: center">If it&rsquo;s a protected widget (not is possible to delete if it&rsquo;s true)</td>
+<td style="text-align: right">Boolean</td>
+<td style="text-align: right">true - false</td>
+<td style="text-align: right">No</td>
+</tr>
+<tr>
 <td>verified</td>
 <td style="text-align: center">If it&rsquo;s verified by other user</td>
 <td style="text-align: right">Boolean</td>
@@ -2640,6 +2654,11 @@ Remember — the response is jsonapi format
 <tr>
 <td>default</td>
 <td style="text-align: center">If it&rsquo;s a default layer for the dataset that it belongs</td>
+<td style="text-align: right">Boolean</td>
+</tr>
+<tr>
+<td>protected</td>
+<td style="text-align: center">If it&rsquo;s a protected layer (not is possible to delete if it&rsquo;s true)</td>
 <td style="text-align: right">Boolean</td>
 </tr>
 <tr>
